--- a/helm_deploy/hmpps-template-kotlin/values.yaml
+++ b/helm_deploy/hmpps-template-kotlin/values.yaml
@@ -1,18 +1,18 @@
 generic-service:
-  nameOverride: hmpps-template-kotlin
+  nameOverride: migration-link-exchange-api
   productId: "UNASSIGNED" # productId for the product that this belongs too, i.e. DPS001, see README.md for details
 
   replicaCount: 4
 
   image:
-    repository: ghcr.io/ministryofjustice/hmpps-template-kotlin
+    repository: ghcr.io/ministryofjustice/migration-link-exchange-api
     tag: app_version # override at deployment time
     port: 8080
 
   ingress:
     enabled: true
     host: app-hostname.local # override per environment
-    tlsSecretName: hmpps-template-kotlin-cert
+    tlsSecretName: migration-link-exchange-api-cert
 
   # Environment variables to load into the deployment
   env:
@@ -26,11 +26,11 @@ generic-service:
   #     [name of environment variable as seen by app]: [key of kubernetes secret to load]
 
   namespace_secrets:
-    hmpps-template-kotlin-client-creds:
+    migration-link-exchange-api-client-creds:
       # Example client registration secrets
       EXAMPLE_API_CLIENT_ID: "API_CLIENT_ID"
       EXAMPLE_API_CLIENT_SECRET: "API_CLIENT_SECRET"
-    hmpps-template-kotlin-application-insights:
+    migration-link-exchange-api-application-insights:
       APPLICATIONINSIGHTS_CONNECTION_STRING: "APPLICATIONINSIGHTS_CONNECTION_STRING"
 
   allowlist:
@@ -38,4 +38,4 @@ generic-service:
       - internal
 
 generic-prometheus-alerts:
-  targetApplication: hmpps-template-kotlin
+  targetApplication: migration-link-exchange-api
