--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,7 +39,12 @@ jobs:
       environment: ${{ matrix.environments }}
   kotlin_validate:
     name: Validate the kotlin
-    uses: ministryofjustice/hmpps-github-actions/.github/workflows/kotlin_validate.yml@v2 # WORKFLOW_VERSION
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Validate
+        run: make dev-up test
+
     secrets: inherit
   build:
     name: Build docker image from hmpps-github-actions
