--- a/helm_deploy/migration-link-exchange-api/values.yaml
+++ b/helm_deploy/migration-link-exchange-api/values.yaml
@@ -29,6 +29,15 @@ generic-service:
     migration-link-exchange-api-application-insights:
       APPLICATIONINSIGHTS_CONNECTION_STRING: "APPLICATIONINSIGHTS_CONNECTION_STRING"
 
+    rds-postgresql-instance-output:
+      DB_ENDPOINT: rds_instance_endpoint
+      DB_NAME: database_name
+      DB_USERNAME: database_username
+      DB_PASSWORD: database_password
+
+    migration-link-exchange-api:
+      APP_MIGRATION_CSV_URL: migration_csv_url
+
   allowlist:
     groups:
       - internal
