--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   codec:
     max-in-memory-size: 10MB
   datasource:
-    url: jdbc:postgresql://${db.endpoint}/${db.name}?currentSchema=${database.schema.name:sentence-plan}&user=${db.username:root}&password=${db.password:dev}&stringtype=unspecified
+    url: jdbc:postgresql://${db.endpoint}/${db.name}?currentSchema=${database.schema.name}&user=${db.username:root}&password=${db.password:dev}&stringtype=unspecified
     username: ${db.username}
     password: ${db.password}
   jpa:
