--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -7,6 +7,6 @@ management.endpoint:
 
 spring:
   datasource:
-    url: jdbc:postgresql://${db.endpoint}/${db.name}?currentSchema=${database.schema.name:sentence-plan}&user=${db.username:root}&password=${db.password:dev}&stringtype=unspecified
+    url: jdbc:postgresql://${db.endpoint}/${db.name}?currentSchema=${database.schema.name}&user=${db.username:root}&password=${db.password:dev}&stringtype=unspecified
     username: ${db.username}
     password: ${db.password}
