--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -1,3 +1,6 @@
+volumes:
+  minio_storage:
+
 services:
   wiremock:
     image: wiremock/wiremock:3.3.1
@@ -15,7 +18,12 @@ services:
       target: development
     command: gradle --parallel --build-cache --configuration-cache bootRun
     depends_on:
-      - wiremock
+      wiremock:
+        condition: service_started
+      minio:
+        condition: service_healthy
+      minio-init:
+        condition: service_completed_successfully
     ports:
       - "5005:5005"
     environment:
@@ -23,3 +31,34 @@ services:
     volumes:
       - ..:/app
       - ~/.gradle:/home/gradle/.gradle
+
+  minio:
+    image: minio/minio
+    ports:
+      - "9000:9000" # The AWS S3 compatible API.
+      - "9001:9001" # The Minio web console.
+    volumes:
+      - minio_storage:/data
+    environment:
+      MINIO_ROOT_USER: minio-user
+      MINIO_ROOT_PASSWORD: minio-pass
+    command: server --console-address ":9001" /data
+    healthcheck:
+      test: timeout 5s bash -c ':> /dev/tcp/127.0.0.1/9000' || exit 1
+      start_period: 5s
+      interval: 10s
+      timeout: 5s
+      retries: 2
+
+  minio-init:
+    image: minio/mc
+    depends_on:
+      minio:
+        condition: service_healthy
+    entrypoint: |
+      /bin/sh -c "
+        mc config host add dataset http://minio:9000 minio-user minio-pass
+        mc mb dataset/dev-bucket --ignore-existing
+        mc anonymous set download dataset/dev-bucket;
+        exit 0
+      "
