--- a/helm_deploy/migration-link-exchange-api/values.yaml
+++ b/helm_deploy/migration-link-exchange-api/values.yaml
@@ -21,6 +21,7 @@ generic-service:
     JAVA_OPTS: "-Xmx512m"
     SERVER_PORT: "8080"
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
+    S3_REGION: "eu-west-2"
 
   # Pre-existing kubernetes secrets to load as environment variables in the deployment.
   # namespace_secrets:
@@ -39,6 +40,9 @@ generic-service:
 
     migration-link-exchange-api:
       APP_MIGRATION_CSV_URL: migration_csv_url
+
+    s3-bucket-output:
+      S3_BUCKET: bucket_name
 
   allowlist:
     groups:
