--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -2,7 +2,9 @@
 # Per environment values which override defaults in migration-link-exchange-api/values.yaml
 
 generic-service:
-  replicaCount: 2
+  # replicaCount: 2
+  # Temporarily set replica count to 1, during data migration phase.
+  replicaCount: 1
 
   ingress:
     host: migration-link-exchange-api-dev.hmpps.service.justice.gov.uk
