--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -38,7 +38,7 @@ services:
       - ~/.gradle:/home/gradle/.gradle
 
   minio:
-    image: minio/minio
+    image: minio/minio:latest
     ports:
       - "9000:9000" # The AWS S3 compatible API.
       - "9001:9001" # The Minio web console.
@@ -56,18 +56,14 @@ services:
       retries: 2
 
   minio-init:
-    image: minio/mc
+    image: minio/mc:latest
     depends_on:
       minio:
         condition: service_healthy
     entrypoint: |
       /bin/sh -c "
-        mc config host add dataset http://minio:9000 minio-user minio-pass
+        mc alias set minio http://minio:9000 minio-user minio-pass;
         mc mb dataset/dev-bucket --ignore-existing
         mc anonymous set download dataset/dev-bucket;
-        while ! mc ls dataset/dev-bucket; do
-          echo 'Waiting for bucket to be created...'
-          sleep 1
-        done
         exit 0
       "
