--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -62,7 +62,7 @@ services:
         condition: service_healthy
     entrypoint: |
       /bin/sh -c "
-        mc alias set minio http://minio:9000 minio-user minio-pass;
+        mc alias set dataset http://minio:9000 minio-user minio-pass;
         mc mb dataset/dev-bucket --ignore-existing
         mc anonymous set download dataset/dev-bucket;
         exit 0
