--- a/helm_deploy/migration-link-exchange-api/values.yaml
+++ b/helm_deploy/migration-link-exchange-api/values.yaml
@@ -22,6 +22,7 @@ generic-service:
     SERVER_PORT: "8080"
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
     S3_REGION: "eu-west-2"
+    SKIP_IMPORT: "true"
 
   # Pre-existing kubernetes secrets to load as environment variables in the deployment.
   # namespace_secrets:
